--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,12 @@
             <p class="control">
               <%= link_to 'New Tweet', new_tweet_path, class: 'button is-info is-inverted' %>
             </p>
-            <p class="control"> Sign Up </p>
+            <p class="control">
+              <%= link_to 'Sign Up', new_user_registration_path, class: 'button is-info is-inverted' %>
+            </p>
+            <p class="control">
+              <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'button is-info is-inverted' %>
+            </p>
           </div>
         </div>
       </div>
