--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -1,29 +1,32 @@
 <div class="column is-half">
+<% if user_signed_in? %>
   <article class="media box">
     <figure class="media-left">
       <p class="image is-64x64">
-        <img src="https://bulma.io/images/placeholders/64x64.png">
+        <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
       </p>
     </figure>
     <div class="media-content">
       <%= render 'tweets/form' %>
     </div>
   </article>
+<% end %>
 
   <% @tweets.each do |tweet| %>
     <div class="box">
       <article class="media">
         <div class="media-left">
           <figure class="image is-64x64">
-            <img src="https://bulma.io/images/placeholders/64x64.png">
+            <%= gravatar_image_tag(tweet.user.email, size: 64, alt: tweet.user.name) %>
           </figure>
         </div>
         <div class="media-content">
           <div class="content">
-            <strong>Zeenat Lawal</strong><br>
-            <small>@lawal_zeenat</small><br>
+            <strong><%= tweet.user.name %></strong><br>
+            <small>@<%= tweet.user.username %></small><br>
             <p><%= tweet.tweet %></p>
           </div>
+          <% if user_signed_in? %>
           <nav class="level">
             <div class="level-left is-mobile">
               <%= link_to tweet, class: 'level-item' do %>
@@ -37,6 +40,7 @@
               <% end %>
             </div>
           </nav>
+          <% end %>
         </div>
       </article>
     </div>
